Bug 637233: Fixes return values for Android atomic-inc/dec-and-get (r=fklockii, r pending kpalacz)